@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+    - Disable InstallRelease unless install_command is set
+
 0.27 2013-01-14 08:21:25
 
     - Add InstallRelease with install_command = "cpanm ."
